--- a/views/contacts/form.handlebars
+++ b/views/contacts/form.handlebars
@@ -9,6 +9,10 @@
         <input type="text" name="name" />
     </div>
     <div>
+        <label>How can we help?</label>
+        <textarea name="enquiry"></textarea>
+    </div>
+    <div>
         {{!-- type submit means we will 'execute' the form and send it. value just what is printed on the button --}}
         <input type="submit" value="Send Contact Form" />
     </div>
